--- a/codebase/.gitignore
+++ b/codebase/.gitignore
@@ -1,5 +1,6 @@
 # Miscellaneous
 *.class
+*.lock
 *.log
 *.pyc
 *.swp
@@ -11,6 +12,7 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.cph/
 
 # IntelliJ related
 *.iml
@@ -43,3 +45,92 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Compiled JavaScript files
+/web/build/
+
+# Local environment files
+.env*
+!.env.example
+
+# Firebase config files
+google-services.json
+GoogleService-Info.plist
+
+# Coverage reports
+/coverage/
+
+# iOS specific
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/.symlinks/
+**/ios/**/profile
+**/ios/**/xcuserdata
+**/ios/.generated/
+
+# macOS specific
+**/macos/Flutter/GeneratedPluginRegistrant.*
+**/macos/Flutter/ephemeral/
+
+# Packages file
+.packages
+
+# Python virtual environments
+.venv/
+venv/
+env/
+virtualenv/
+**/lib/prac/.venv/
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Large directories and generated files
+/build/
+/.dart_tool/
+/.gradle/
+**/build/
+**/dist/
+**/.dart_tool/
+**/.gradle/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*~
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Specific project directories to ignore
+/lib/prac/
+/lib/tempP/
+**/*.ipynb
+**/*.ogg
+**/*.mp3
+**/*.wav
+**/cmake-build-debug/
+
+# Audio and ML models
+**/*.pt
+**/*.pth
+**/*.onnx
+**/*.bin
+**/*.tflite
